# SuperPoint-Stereo-Visual-Odometry

./: .gitignore  README.md
src/odml_data_processing/: CMakeLists.txt  package.xml
src/odml_data_processing/action/: kitti_data_loader.action
src/odml_data_processing/kitti_latency_csvs/jetson/: ORB_ORB_120_392_seq_4.csv  ORB_ORB_240_784_seq_4.csv  ORB_ORB_360_1176_seq_4.csv  SIFT_SIFT_120_392_seq_4.csv  SIFT_SIFT_240_784_seq_4.csv  SIFT_SIFT_360_1176_seq_4.csv  sp_mbv1_1_120_392_FP16_seq_4.csv  sp_mbv1_1_120_392_FP32_seq_4.csv  sp_mbv1_1_240_784_FP16_seq_4.csv  sp_mbv1_1_240_784_FP32_seq_4.csv  sp_mbv1_1_360_1176_FP16_seq_4.csv  sp_mbv1_1_360_1176_FP32_seq_4.csv  sp_mbv1_2_120_392_FP16_seq_4.csv  sp_mbv1_2_120_392_FP32_seq_4.csv  sp_mbv1_2_240_784_FP16_seq_4.csv  sp_mbv1_2_240_784_FP32_seq_4.csv  sp_mbv1_2_360_1176_FP16_seq_4.csv  sp_mbv1_2_360_1176_FP32_seq_4.csv  sp_mbv2_1_120_392_FP16_seq_4.csv  sp_mbv2_1_120_392_FP32_seq_4.csv  sp_mbv2_1_240_784_FP16_seq_4.csv  sp_mbv2_1_240_784_FP32_seq_4.csv  sp_mbv2_1_360_1176_FP16_seq_4.csv  sp_mbv2_1_360_1176_FP32_seq_4.csv  sp_mbv2_2_120_392_FP16_seq_4.csv  sp_mbv2_2_120_392_FP32_seq_4.csv  sp_mbv2_2_240_784_FP16_seq_4.csv  sp_mbv2_2_240_784_FP32_seq_4.csv  sp_mbv2_2_360_1176_FP16_seq_4.csv  sp_mbv2_2_360_1176_FP32_seq_4.csv  sp_resnet18_1_120_392_FP16_seq_4.csv  sp_resnet18_1_120_392_FP32_seq_4.csv  sp_resnet18_1_240_784_FP16_seq_4.csv  sp_resnet18_1_240_784_FP32_seq_4.csv  sp_resnet18_1_360_1176_FP16_seq_4.csv  sp_resnet18_1_360_1176_FP32_seq_4.csv  sp_resnet18_2_120_392_FP16_seq_4.csv  sp_resnet18_2_120_392_FP32_seq_4.csv  sp_resnet18_2_240_784_FP16_seq_4.csv  sp_resnet18_2_240_784_FP32_seq_4.csv  (+38 more)
src/odml_data_processing/kitti_latency_csvs/laptop/: ORB_ORB_120_392_seq_0.csv  ORB_ORB_120_392_seq_1.csv  ORB_ORB_120_392_seq_10.csv  ORB_ORB_120_392_seq_2.csv  ORB_ORB_120_392_seq_4.csv  ORB_ORB_120_392_seq_5.csv  ORB_ORB_120_392_seq_6.csv  ORB_ORB_120_392_seq_7.csv  ORB_ORB_120_392_seq_8.csv  ORB_ORB_120_392_seq_9.csv  ORB_ORB_240_784_seq_0.csv  ORB_ORB_240_784_seq_1.csv  ORB_ORB_240_784_seq_10.csv  ORB_ORB_240_784_seq_2.csv  ORB_ORB_240_784_seq_4.csv  ORB_ORB_240_784_seq_5.csv  ORB_ORB_240_784_seq_6.csv  ORB_ORB_240_784_seq_7.csv  ORB_ORB_240_784_seq_8.csv  ORB_ORB_240_784_seq_9.csv  ORB_ORB_360_1176_seq_0.csv  ORB_ORB_360_1176_seq_1.csv  ORB_ORB_360_1176_seq_10.csv  ORB_ORB_360_1176_seq_2.csv  ORB_ORB_360_1176_seq_4.csv  ORB_ORB_360_1176_seq_5.csv  ORB_ORB_360_1176_seq_6.csv  ORB_ORB_360_1176_seq_7.csv  ORB_ORB_360_1176_seq_8.csv  ORB_ORB_360_1176_seq_9.csv  SIFT_SIFT_120_392_seq_0.csv  SIFT_SIFT_120_392_seq_10.csv  SIFT_SIFT_120_392_seq_2.csv  SIFT_SIFT_120_392_seq_4.csv  SIFT_SIFT_120_392_seq_5.csv  SIFT_SIFT_120_392_seq_6.csv  SIFT_SIFT_120_392_seq_7.csv  SIFT_SIFT_120_392_seq_8.csv  SIFT_SIFT_120_392_seq_9.csv  SIFT_SIFT_240_784_seq_0.csv  (+187 more)
src/odml_data_processing/kitti_latency_csvs/workstation/: sp_mbv1_2_120_392_FP16_seq_0.csv  sp_mbv1_2_120_392_FP16_seq_1.csv  sp_mbv1_2_120_392_FP16_seq_10.csv  sp_mbv1_2_120_392_FP16_seq_2.csv  sp_mbv1_2_120_392_FP16_seq_4.csv  sp_mbv1_2_120_392_FP16_seq_5.csv  sp_mbv1_2_120_392_FP16_seq_6.csv  sp_mbv1_2_120_392_FP16_seq_7.csv  sp_mbv1_2_120_392_FP16_seq_8.csv  sp_mbv1_2_120_392_FP16_seq_9.csv  sp_mbv1_2_120_392_FP32_seq_0.csv  sp_mbv1_2_120_392_FP32_seq_1.csv  sp_mbv1_2_120_392_FP32_seq_10.csv  sp_mbv1_2_120_392_FP32_seq_2.csv  sp_mbv1_2_120_392_FP32_seq_4.csv  sp_mbv1_2_120_392_FP32_seq_5.csv  sp_mbv1_2_120_392_FP32_seq_6.csv  sp_mbv1_2_120_392_FP32_seq_7.csv  sp_mbv1_2_120_392_FP32_seq_8.csv  sp_mbv1_2_120_392_FP32_seq_9.csv  sp_mbv1_2_240_784_FP16_seq_0.csv  sp_mbv1_2_240_784_FP16_seq_1.csv  sp_mbv1_2_240_784_FP16_seq_10.csv  sp_mbv1_2_240_784_FP16_seq_2.csv  sp_mbv1_2_240_784_FP16_seq_4.csv  sp_mbv1_2_240_784_FP16_seq_5.csv  sp_mbv1_2_240_784_FP16_seq_6.csv  sp_mbv1_2_240_784_FP16_seq_7.csv  sp_mbv1_2_240_784_FP16_seq_8.csv  sp_mbv1_2_240_784_FP16_seq_9.csv  sp_mbv1_2_240_784_FP32_seq_0.csv  sp_mbv1_2_240_784_FP32_seq_1.csv  sp_mbv1_2_240_784_FP32_seq_10.csv  sp_mbv1_2_240_784_FP32_seq_2.csv  sp_mbv1_2_240_784_FP32_seq_4.csv  sp_mbv1_2_240_784_FP32_seq_5.csv  sp_mbv1_2_240_784_FP32_seq_6.csv  sp_mbv1_2_240_784_FP32_seq_7.csv  sp_mbv1_2_240_784_FP32_seq_8.csv  sp_mbv1_2_240_784_FP32_seq_9.csv  (+349 more)
src/odml_data_processing/kitti_results/ORB_ORB_120_392/: 00_pred.txt  01_pred.txt  02_pred.txt  04_pred.txt  05_pred.txt  06_pred.txt  07_pred.txt  08_pred.txt  09_pred.txt  10_pred.txt
src/odml_data_processing/kitti_results/ORB_ORB_240_784/: 00_pred.txt  01_pred.txt  02_pred.txt  04_pred.txt  05_pred.txt  06_pred.txt  07_pred.txt  08_pred.txt  09_pred.txt  10_pred.txt
src/odml_data_processing/kitti_results/ORB_ORB_360_1176/: 00_pred.txt  01_pred.txt  02_pred.txt  04_pred.txt  05_pred.txt  06_pred.txt  (+4 more)
src/odml_data_processing/launch/: data_loader.launch  jetson_data_loader.launch  long_term_eval.launch  main.launch
src/odml_data_processing/rviz/: main.rviz
src/odml_data_processing/script/: jetson_nano_power_stats_node.py
src/odml_data_processing/src/: classic_data_processing_eval_node.cpp  data_processing_eval_node.cpp  data_processing_node.cpp  jetson_nano_power_stats_node2.cpp  superpoint_data_processing_eval_node.cpp
src/odml_visual_odometry/: CMakeLists.txt  README.md  package.xml  readme.md
src/odml_visual_odometry/include/odml_visual_odometry/: ceres_cost_function.hpp  feature_detection.hpp  logging.h
src/odml_visual_odometry/launch/: classic_visual_odometry.launch  visual_odometry_classic.launch  visual_odometry_superpoint.launch  visual_odometry_superpoint_jetson.launch
src/odml_visual_odometry/models/: README.md  sp_mbv1_b1.onnx  sp_mbv1_b2.onnx  sp_mbv2.onnx  sp_mbv2_b1.onnx  sp_mbv2_b2.onnx  sp_squeeze_b1.onnx  sp_squeeze_b2.onnx  superpoint_pretrained_120_160.engine  superpoint_pretrained_120_396.engine
src/odml_visual_odometry/scripts/: engine_generation.py
src/odml_visual_odometry/src/: feature_detection_base.cpp  feature_detection_classic.cpp  feature_detection_neural_network.cpp  test_superpoint.cpp  visual_odometry_eval_node.cpp  visual_odometry_node.cpp
(+556 files in other folders)
